/**
 * Copyright 2018-2020 Streamlit Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

syntax = "proto3";

// A python empty.
message Balloons {
  Type type = 1;

  // A random number. If same as previous run, will not reshow balloons.
  uint32 execution_id = 2;

  enum Type {
    DEFAULT = 0;
    BALLOON = 1;
    HAPPY_FACE = 2;
    STAR_FACE = 3;
    COOL_FACE = 4;
  }
}
